fix chat scroll and outline on safari in inputs and colorselector

--- a/src/components/chat-container/chat-container.scss
+++ b/src/components/chat-container/chat-container.scss
@@ -1,8 +1,8 @@
 .chat-container {
-  padding: 1rem;
   height: 100%;
   overflow-y: scroll;
   position: relative;
+  display: grid;
 
   &::-webkit-scrollbar {
     width: 0px;
@@ -20,6 +20,7 @@
     flex-direction: column;
     justify-content: flex-end;
     gap: 1rem;
+    padding: 1rem;
   }
 
   & &__error {
