--- a/src/components/color-selector/color-selector.scss
+++ b/src/components/color-selector/color-selector.scss
@@ -7,7 +7,7 @@
     aspect-ratio: 1/1;
     width: 20px;
     border-radius: var(--border-radius-small);
-    outline: 1px solid var(--clr-black);
+    border: 1px solid var(--clr-black);
     cursor: pointer;
   }
 }
